--- a/ofEventUtils.html
+++ b/ofEventUtils.html
@@ -25,23 +25,25 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">events</a> &gt; <span id="classQuickNav">ofEventUtils.h</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofEventUtils.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#Enums">Enums</a></li><li class="chapter"><a href="#Functions">Functions</a></li></ul>
+          <li class="chapter"><a href="#Enums">Enums</a></li><li class="chapter"><a href="#Functions">Functions</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofEventUtils.h</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="Enums">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofEventUtils.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Enums">
     <h3 class="sectionHeader">Enums</h3>
     <div class="sectionContent"><div id="a09bc3e2c6034a656a3bb3da9aff5a42b">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a09bc3e2c6034a656a3bb3da9aff5a42b&quot;)">
@@ -332,7 +334,52 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofEvent</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicFunctions">
+    <h3 class="sectionHeader">Public Functions</h3>
+    <div class="sectionContent"><div id="ac6586b0bbcea9aa3c7bd0704d18d6afa">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ac6586b0bbcea9aa3c7bd0704d18d6afa&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">ofEvent</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ac6586b0bbcea9aa3c7bd0704d18d6afa_description">
+
+</div>
+
+  </div><div id="a73537daa04f24da1fdac968c327d87e3">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a73537daa04f24da1fdac968c327d87e3&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">ofEvent</a>
+      <span class="args">(const ofEvent&lt; ArgumentsType &gt; &amp;mom)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a73537daa04f24da1fdac968c327d87e3_description">
+
+</div>
+
+  </div><div id="a36c6c7348e9c536123d0a5b455c5b1b9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a36c6c7348e9c536123d0a5b455c5b1b9&quot;)">
+      <span class="type"><a href="ofEvent.html">ofEvent</a></span>
+      <a class="name">operator=</a>
+      <span class="args">(const ofEvent&lt; ArgumentsType &gt; &amp;mom)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a36c6c7348e9c536123d0a5b455c5b1b9_description">
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div></div>
     </div>
 
 </div>
@@ -349,6 +396,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
