--- a/ofGraphics.html
+++ b/ofGraphics.html
@@ -25,7 +25,7 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">graphics</a> &gt; <span id="classQuickNav">ofGraphics.h</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofGraphics.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
@@ -37,11 +37,13 @@
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofGraphics.h</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="Defines">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofGraphics.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Defines">
     <h3 class="sectionHeader">Defines</h3>
     <div class="sectionContent"><div id="afa335a0122f14deecf486ca1e475c5ec">
     <div class="methodHeader" onClick="toggleDescription(&quot;#afa335a0122f14deecf486ca1e475c5ec&quot;)">
@@ -2131,7 +2133,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -2148,6 +2150,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
