--- a/ofMatrix3x3.html
+++ b/ofMatrix3x3.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofMatrix3x3</title>
+  <title>ofMatrix3x3.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">math</a> &gt; <span id="classQuickNav">ofMatrix3x3</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofMatrix3x3.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
@@ -37,12 +37,20 @@
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofMatrix3x3</h1>
-        </div>
-        <div class="classDescription"><div class="textblock"><p>Credits: Code adopted from Lode Vandevenne <a href="http://student.kuleuven.be/~m0216922/CG/">http://student.kuleuven.be/~m0216922/CG/</a> </p>
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofMatrix3x3.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofMatrix3x3</h1>
+    </div>
+    <div class="classDescription"><div class="textblock"><p>Credits: Code adopted from Lode Vandevenne <a href="http://student.kuleuven.be/~m0216922/CG/">http://student.kuleuven.be/~m0216922/CG/</a> </p>
 </div></div>
-        <div class="classMethods"><div id="PublicAttributes">
+    <div class="classMethods"><div id="PublicAttributes">
     <h3 class="sectionHeader">Public Attributes</h3>
     <div class="sectionContent"><div id="afe58dfb5d5e8b1c2c27e552e7895bbc1">
     <div class="methodHeader" onClick="toggleDescription(&quot;#afe58dfb5d5e8b1c2c27e552e7895bbc1&quot;)">
@@ -449,7 +457,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -466,6 +474,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
