--- a/ofMatrix4x4.html
+++ b/ofMatrix4x4.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofMatrix4x4</title>
+  <title>ofMatrix4x4.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,82 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">math</a> &gt; <span id="classQuickNav">ofMatrix4x4</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofMatrix4x4.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#Friends">Friends</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
+          <li class="chapter"><a href="#Functions">Functions</a></li><li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#Friends">Friends</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofMatrix4x4</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="PublicAttributes">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofMatrix4x4.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Functions">
+    <h3 class="sectionHeader">Functions</h3>
+    <div class="sectionContent"><div id="a7b8e55ff0129b7914cef141df5384b22">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a7b8e55ff0129b7914cef141df5384b22&quot;)">
+      <span class="type">ostream &amp; </span>
+      <a class="name">operator&lt;&lt;</a>
+      <span class="args">(ostream &amp;os, const ofMatrix4x4 &amp;M)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a7b8e55ff0129b7914cef141df5384b22_description">
+
+</div>
+
+  </div><div id="a9099b5cd49312f96b803f1f9034695ac">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a9099b5cd49312f96b803f1f9034695ac&quot;)">
+      <span class="type">istream &amp; </span>
+      <a class="name">operator&gt;&gt;</a>
+      <span class="args">(istream &amp;is, ofMatrix4x4 &amp;M)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a9099b5cd49312f96b803f1f9034695ac_description">
+
+</div>
+
+  </div><div id="a2b8431068efe296c811142a8c1871f46">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a2b8431068efe296c811142a8c1871f46&quot;)">
+      <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
+      <a class="name">operator*</a>
+      <span class="args">(const ofVec3f &amp;v, const ofMatrix4x4 &amp;m)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a2b8431068efe296c811142a8c1871f46_description">
+
+</div>
+
+  </div><div id="ab8a41dec03bde6633c0c56884173f837">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ab8a41dec03bde6633c0c56884173f837&quot;)">
+      <span class="type"><a href="ofVec4f.html">ofVec4f</a></span>
+      <a class="name">operator*</a>
+      <span class="args">(const ofVec4f &amp;v, const ofMatrix4x4 &amp;m)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ab8a41dec03bde6633c0c56884173f837_description">
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofMatrix4x4</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicAttributes">
     <h3 class="sectionHeader">Public Attributes</h3>
     <div class="sectionContent"><div id="a28dd7ff5eee745c3ccd17e706fb7df54">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a28dd7ff5eee745c3ccd17e706fb7df54&quot;)">
@@ -1339,7 +1398,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -1356,6 +1415,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
