--- a/ofPath.html
+++ b/ofPath.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofPath</title>
+  <title>ofPath.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,228 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">graphics</a> &gt; <span id="classQuickNav">ofPath</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofPath.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#PublicTypes">Public Types</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li></ul>
+          <li class="chapter"><a href="#PublicTypes">Public Types</a></li><li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#PublicTypes">Public Types</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofPath</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="PublicTypes">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofPath.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofPath::Command</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicTypes">
+    <h3 class="sectionHeader">Public Types</h3>
+    <div class="sectionContent"><div id="a3cf8602f5114fa60143fd1992e239f6a">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a3cf8602f5114fa60143fd1992e239f6a&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">Type</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a3cf8602f5114fa60143fd1992e239f6a_description">
+<table class="fieldtable">
+<tr><th colspan="2">Enumerator</th></tr><tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aa023be6c3966ea12cc037aee491d552ea"></a>moveTo&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aa8ba00296900784595b7b5b63cd2e188f"></a>lineTo&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aaaa352fad77869f6405c994f44a1a8302"></a>curveTo&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aa1498d4919c892b7a4bc5ff5da4d5bcd4"></a>bezierTo&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aa3f270ad74953d0df31e66798fe3e0a30"></a>quadBezierTo&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aaf95a2ad57cc10b9e91f46f0d0e74cf3a"></a>arc&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aa0ffeb5419a95b09d2b648ba3882c2670"></a>arcNegative&#xA0;</td><td class="fielddoc">
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a3cf8602f5114fa60143fd1992e239f6aaf9a319c8469d5b7000bde32454ae95cc"></a>close&#xA0;</td><td class="fielddoc">
+</td></tr>
+</table>
+
+</div>
+
+  </div></div>
+  </div><div id="PublicAttributes">
+    <h3 class="sectionHeader">Public Attributes</h3>
+    <div class="sectionContent"><div id="aac7fdf645a75a9b82843e800c795dd2f">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#aac7fdf645a75a9b82843e800c795dd2f&quot;)">
+      <span class="type"><a href="ofPath11Command.html#1a3cf8602f5114fa60143fd1992e239f6a">Type</a></span>
+      <a class="name">type</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="aac7fdf645a75a9b82843e800c795dd2f_description">
+
+</div>
+
+  </div><div id="a0aed8fd06fd0576b61a93e00d2b57000">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a0aed8fd06fd0576b61a93e00d2b57000&quot;)">
+      <span class="type"><a href="ofBaseTypes.html#1a0e9c5f9596918593de99ee1bd275476f">ofPoint</a></span>
+      <a class="name">to</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a0aed8fd06fd0576b61a93e00d2b57000_description">
+
+</div>
+
+  </div><div id="a4f1991975c654ca0d7357df81929a73d">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a4f1991975c654ca0d7357df81929a73d&quot;)">
+      <span class="type"><a href="ofBaseTypes.html#1a0e9c5f9596918593de99ee1bd275476f">ofPoint</a></span>
+      <a class="name">cp1</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a4f1991975c654ca0d7357df81929a73d_description">
+
+</div>
+
+  </div><div id="aa230fb98261565315c948f5dca96f757">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#aa230fb98261565315c948f5dca96f757&quot;)">
+      <span class="type"><a href="ofBaseTypes.html#1a0e9c5f9596918593de99ee1bd275476f">ofPoint</a></span>
+      <a class="name">cp2</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="aa230fb98261565315c948f5dca96f757_description">
+
+</div>
+
+  </div><div id="aed6a5fef5f92eb60ec2ce10a0159168a">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#aed6a5fef5f92eb60ec2ce10a0159168a&quot;)">
+      <span class="type">float </span>
+      <a class="name">radiusX</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="aed6a5fef5f92eb60ec2ce10a0159168a_description">
+
+</div>
+
+  </div><div id="afd88ea470df3c2adb92eccab26df854c">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#afd88ea470df3c2adb92eccab26df854c&quot;)">
+      <span class="type">float </span>
+      <a class="name">radiusY</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="afd88ea470df3c2adb92eccab26df854c_description">
+
+</div>
+
+  </div><div id="afa56809613ff1abf5ddb21e197c709f0">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#afa56809613ff1abf5ddb21e197c709f0&quot;)">
+      <span class="type">float </span>
+      <a class="name">angleBegin</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="afa56809613ff1abf5ddb21e197c709f0_description">
+
+</div>
+
+  </div><div id="a057970c33f3a6107720849a6625cbe5f">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a057970c33f3a6107720849a6625cbe5f&quot;)">
+      <span class="type">float </span>
+      <a class="name">angleEnd</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a057970c33f3a6107720849a6625cbe5f_description">
+
+</div>
+
+  </div></div>
+  </div><div id="PublicFunctions">
+    <h3 class="sectionHeader">Public Functions</h3>
+    <div class="sectionContent"><div id="af8bbbddefbbd108efc03a68bb7a2aaa9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#af8bbbddefbbd108efc03a68bb7a2aaa9&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">Command</a>
+      <span class="args">(Type type)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="af8bbbddefbbd108efc03a68bb7a2aaa9_description">
+
+<p>for close </p>
+
+</div>
+
+  </div><div id="a469ae200517c5fd32cf87cb6c62310c8">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a469ae200517c5fd32cf87cb6c62310c8&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">Command</a>
+      <span class="args">(Type type, const ofPoint &amp;p)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a469ae200517c5fd32cf87cb6c62310c8_description">
+
+<p>for lineTo and curveTo </p>
+
+</div>
+
+  </div><div id="a7d1d33a26b6497c0b030b79401a6935e">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a7d1d33a26b6497c0b030b79401a6935e&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">Command</a>
+      <span class="args">(Type type, const ofPoint &amp;p, const ofPoint &amp;cp1, const ofPoint &amp;cp2)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a7d1d33a26b6497c0b030b79401a6935e_description">
+
+<p>for bezierTo </p>
+
+</div>
+
+  </div><div id="a792a2926770368c9c38fb2ff92d678ff">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a792a2926770368c9c38fb2ff92d678ff&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">Command</a>
+      <span class="args">(Type type, const ofPoint &amp;centre, float radiusX, float radiusY, float angleBegin, float angleEnd)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a792a2926770368c9c38fb2ff92d678ff_description">
+
+<p>for arc </p>
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofPath</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicTypes">
     <h3 class="sectionHeader">Public Types</h3>
     <div class="sectionContent"><div id="aa20ad057e28b19dfa200361fba0bb343">
     <div class="methodHeader" onClick="toggleDescription(&quot;#aa20ad057e28b19dfa200361fba0bb343&quot;)">
@@ -1074,7 +1279,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -1091,6 +1296,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
