--- a/ofVbo.html
+++ b/ofVbo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofVbo</title>
+  <title>ofVbo.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,325 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">gl</a> &gt; <span id="classQuickNav">ofVbo</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofVbo.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
+          <li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofVbo</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="PublicFunctions">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVbo.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVbo::VertexAttribute</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicAttributes">
+    <h3 class="sectionHeader">Public Attributes</h3>
+    <div class="sectionContent"><div id="a2cd3de8c684ef2f59b5aa57fdeccbd64">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a2cd3de8c684ef2f59b5aa57fdeccbd64&quot;)">
+      <span class="type"><a href="ofBufferObject.html">ofBufferObject</a></span>
+      <a class="name">buffer</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a2cd3de8c684ef2f59b5aa57fdeccbd64_description"></div>
+
+  </div><div id="a5a4852b45fd402faa88fb91a30c42ca9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a5a4852b45fd402faa88fb91a30c42ca9&quot;)">
+      <span class="type">GLsizei </span>
+      <a class="name">stride</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a5a4852b45fd402faa88fb91a30c42ca9_description"></div>
+
+  </div><div id="aa82b9893c1b41126b4961934c4facd76">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#aa82b9893c1b41126b4961934c4facd76&quot;)">
+      <span class="type">GLsizeiptr </span>
+      <a class="name">offset</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="aa82b9893c1b41126b4961934c4facd76_description"></div>
+
+  </div><div id="aa548d5a29695fffbf1c908beaa723948">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#aa548d5a29695fffbf1c908beaa723948&quot;)">
+      <span class="type">int </span>
+      <a class="name">numCoords</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="aa548d5a29695fffbf1c908beaa723948_description"></div>
+
+  </div><div id="a3adb19ffda5f7daf4a25bae17d248a40">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a3adb19ffda5f7daf4a25bae17d248a40&quot;)">
+      <span class="type">GLuint </span>
+      <a class="name">location</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a3adb19ffda5f7daf4a25bae17d248a40_description"></div>
+
+  </div><div id="ac384e80b4f816929fb2e0d7b75a45ab5">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ac384e80b4f816929fb2e0d7b75a45ab5&quot;)">
+      <span class="type">bool </span>
+      <a class="name">normalize</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ac384e80b4f816929fb2e0d7b75a45ab5_description"></div>
+
+  </div></div>
+  </div><div id="PublicFunctions">
+    <h3 class="sectionHeader">Public Functions</h3>
+    <div class="sectionContent"><div id="a9af4944e147d390210e43f31e8e8867a">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a9af4944e147d390210e43f31e8e8867a&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">VertexAttribute</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a9af4944e147d390210e43f31e8e8867a_description"></div>
+
+  </div><div id="a6cef51400a5528395bc1625a8f6b75c4">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a6cef51400a5528395bc1625a8f6b75c4&quot;)">
+      <span class="type">bool </span>
+      <a class="name">isAllocated</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a6cef51400a5528395bc1625a8f6b75c4_description"></div>
+
+  </div><div id="a180814eb0eebc85210750300ccab1531">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a180814eb0eebc85210750300ccab1531&quot;)">
+      <span class="type">void </span>
+      <a class="name">allocate</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a180814eb0eebc85210750300ccab1531_description"></div>
+
+  </div><div id="a13db5ed8e001af613a9da6d8c1576b87">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a13db5ed8e001af613a9da6d8c1576b87&quot;)">
+      <span class="type">void </span>
+      <a class="name">bind</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a13db5ed8e001af613a9da6d8c1576b87_description"></div>
+
+  </div><div id="a94505a709fa7db9a81e8182ef72eb020">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a94505a709fa7db9a81e8182ef72eb020&quot;)">
+      <span class="type">void </span>
+      <a class="name">unbind</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a94505a709fa7db9a81e8182ef72eb020_description"></div>
+
+  </div><div id="a01108c7c5acb775a704c2943c845f3f5">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a01108c7c5acb775a704c2943c845f3f5&quot;)">
+      <span class="type">void </span>
+      <a class="name">setData</a>
+      <span class="args">(GLsizeiptr bytes, const void *data, GLenum usage)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a01108c7c5acb775a704c2943c845f3f5_description"></div>
+
+  </div><div id="a8c897beb92685bafbb40b83a385392d9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a8c897beb92685bafbb40b83a385392d9&quot;)">
+      <span class="type">void </span>
+      <a class="name">updateData</a>
+      <span class="args">(GLintptr offset, GLsizeiptr bytes, const void *data)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a8c897beb92685bafbb40b83a385392d9_description"></div>
+
+  </div><div id="a3628a3cbdf303c31d9fb66188715e53e">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a3628a3cbdf303c31d9fb66188715e53e&quot;)">
+      <span class="type">void </span>
+      <a class="name">setData</a>
+      <span class="args">(const float *attrib0x, int numCoords, int total, int usage, int stride, bool normalize=false)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a3628a3cbdf303c31d9fb66188715e53e_description"></div>
+
+  </div><div id="a80bbae82a0df9f484f1ced002a906113">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a80bbae82a0df9f484f1ced002a906113&quot;)">
+      <span class="type">void </span>
+      <a class="name">setBuffer</a>
+      <span class="args">(ofBufferObject &amp;buffer, int numCoords, int stride, int offset)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a80bbae82a0df9f484f1ced002a906113_description"></div>
+
+  </div><div id="abbb1bc528b552e240ccf0089fddbb70e">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#abbb1bc528b552e240ccf0089fddbb70e&quot;)">
+      <span class="type">void </span>
+      <a class="name">enable</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="abbb1bc528b552e240ccf0089fddbb70e_description"></div>
+
+  </div><div id="a08058101407ff5c437779d6a493bdd11">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a08058101407ff5c437779d6a493bdd11&quot;)">
+      <span class="type">void </span>
+      <a class="name">disable</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a08058101407ff5c437779d6a493bdd11_description"></div>
+
+  </div><div id="a5bdafa9a19540cd9c116a7b943b03c62">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a5bdafa9a19540cd9c116a7b943b03c62&quot;)">
+      <span class="type">GLuint </span>
+      <a class="name">getId</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a5bdafa9a19540cd9c116a7b943b03c62_description"></div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVbo::IndexAttribute</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicAttributes">
+    <h3 class="sectionHeader">Public Attributes</h3>
+    <div class="sectionContent"><div id="abb0e42ea4a932373590551895e81e0d9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#abb0e42ea4a932373590551895e81e0d9&quot;)">
+      <span class="type"><a href="ofBufferObject.html">ofBufferObject</a></span>
+      <a class="name">buffer</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="abb0e42ea4a932373590551895e81e0d9_description"></div>
+
+  </div></div>
+  </div><div id="PublicFunctions">
+    <h3 class="sectionHeader">Public Functions</h3>
+    <div class="sectionContent"><div id="a345f340014e044af15c55a30f6876b23">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a345f340014e044af15c55a30f6876b23&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">IndexAttribute</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a345f340014e044af15c55a30f6876b23_description"></div>
+
+  </div><div id="a57f5792ec602403857bcdb9de844eb5c">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a57f5792ec602403857bcdb9de844eb5c&quot;)">
+      <span class="type">bool </span>
+      <a class="name">isAllocated</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a57f5792ec602403857bcdb9de844eb5c_description"></div>
+
+  </div><div id="a18d36f31f12616ade8abd175713ce2c9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a18d36f31f12616ade8abd175713ce2c9&quot;)">
+      <span class="type">void </span>
+      <a class="name">allocate</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a18d36f31f12616ade8abd175713ce2c9_description"></div>
+
+  </div><div id="a687475fd2435c3ee8e09d661ac530e91">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a687475fd2435c3ee8e09d661ac530e91&quot;)">
+      <span class="type">void </span>
+      <a class="name">bind</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a687475fd2435c3ee8e09d661ac530e91_description"></div>
+
+  </div><div id="a17aa5e39d2327b356f257c86c715cc5b">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a17aa5e39d2327b356f257c86c715cc5b&quot;)">
+      <span class="type">void </span>
+      <a class="name">unbind</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a17aa5e39d2327b356f257c86c715cc5b_description"></div>
+
+  </div><div id="a52c0b86cadfd48c164ef9270505e0e00">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a52c0b86cadfd48c164ef9270505e0e00&quot;)">
+      <span class="type">void </span>
+      <a class="name">setData</a>
+      <span class="args">(GLsizeiptr bytes, const void *data, GLenum usage)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a52c0b86cadfd48c164ef9270505e0e00_description"></div>
+
+  </div><div id="ae412a4f6f00db6d77e6f3edabcdfeb8b">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ae412a4f6f00db6d77e6f3edabcdfeb8b&quot;)">
+      <span class="type">void </span>
+      <a class="name">updateData</a>
+      <span class="args">(GLintptr offset, GLsizeiptr bytes, const void *data)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ae412a4f6f00db6d77e6f3edabcdfeb8b_description"></div>
+
+  </div><div id="a9ae74aa1476415fb9d20133873095e8a">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a9ae74aa1476415fb9d20133873095e8a&quot;)">
+      <span class="type">GLuint </span>
+      <a class="name">getId</a>
+      <span class="args">() const </span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a9ae74aa1476415fb9d20133873095e8a_description"></div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVbo</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicFunctions">
     <h3 class="sectionHeader">Public Functions</h3>
     <div class="sectionContent"><div id="aff203260b1f4e8d7a650045014b8e8da">
     <div class="methodHeader" onClick="toggleDescription(&quot;#aff203260b1f4e8d7a650045014b8e8da&quot;)">
@@ -1082,7 +1384,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -1099,6 +1401,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
