--- a/ofVec2f.html
+++ b/ofVec2f.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofVec2f</title>
+  <title>ofVec2f.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,106 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">math</a> &gt; <span id="classQuickNav">ofVec2f</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofVec2f.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicStaticAttributes">Public Static Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#Friends">Friends</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
+          <li class="chapter"><a href="#Functions">Functions</a></li><li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicStaticAttributes">Public Static Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#Friends">Friends</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofVec2f</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="PublicAttributes">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVec2f.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Functions">
+    <h3 class="sectionHeader">Functions</h3>
+    <div class="sectionContent"><div id="a9e1df79bc9ab4266abbd03c1a0cad7e3">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a9e1df79bc9ab4266abbd03c1a0cad7e3&quot;)">
+      <span class="type"><a href="ofVec2f.html">ofVec2f</a></span>
+      <a class="name">operator+</a>
+      <span class="args">(float f, const ofVec2f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a9e1df79bc9ab4266abbd03c1a0cad7e3_description">
+
+</div>
+
+  </div><div id="afd63c656c641803159c93478485aa58e">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#afd63c656c641803159c93478485aa58e&quot;)">
+      <span class="type"><a href="ofVec2f.html">ofVec2f</a></span>
+      <a class="name">operator-</a>
+      <span class="args">(float f, const ofVec2f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="afd63c656c641803159c93478485aa58e_description">
+
+</div>
+
+  </div><div id="a998bac4b1fe96213dac1b69f761c07f9">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a998bac4b1fe96213dac1b69f761c07f9&quot;)">
+      <span class="type"><a href="ofVec2f.html">ofVec2f</a></span>
+      <a class="name">operator*</a>
+      <span class="args">(float f, const ofVec2f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a998bac4b1fe96213dac1b69f761c07f9_description">
+
+</div>
+
+  </div><div id="a73f103d8ea6d9a986f4dd55998408d30">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a73f103d8ea6d9a986f4dd55998408d30&quot;)">
+      <span class="type"><a href="ofVec2f.html">ofVec2f</a></span>
+      <a class="name">operator/</a>
+      <span class="args">(float f, const ofVec2f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a73f103d8ea6d9a986f4dd55998408d30_description">
+
+</div>
+
+  </div><div id="a8d8d86b805b7897418a316313db81aba">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a8d8d86b805b7897418a316313db81aba&quot;)">
+      <span class="type">ostream &amp; </span>
+      <a class="name">operator&lt;&lt;</a>
+      <span class="args">(ostream &amp;os, const ofVec2f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a8d8d86b805b7897418a316313db81aba_description">
+
+</div>
+
+  </div><div id="a4ad726f903f25dce290671839061246e">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a4ad726f903f25dce290671839061246e&quot;)">
+      <span class="type">istream &amp; </span>
+      <a class="name">operator&gt;&gt;</a>
+      <span class="args">(istream &amp;is, ofVec2f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a4ad726f903f25dce290671839061246e_description">
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVec2f</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicAttributes">
     <h3 class="sectionHeader">Public Attributes</h3>
     <div class="sectionContent"><div id="a81763bfaf27b7db5f734055212ca6ec5">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a81763bfaf27b7db5f734055212ca6ec5&quot;)">
@@ -1071,7 +1154,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -1088,6 +1171,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
