--- a/ofVec3f.html
+++ b/ofVec3f.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofVec3f</title>
+  <title>ofVec3f.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,106 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">math</a> &gt; <span id="classQuickNav">ofVec3f</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofVec3f.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicStaticAttributes">Public Static Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#Friends">Friends</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
+          <li class="chapter"><a href="#Functions">Functions</a></li><li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicStaticAttributes">Public Static Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#Friends">Friends</a></li><li class="chapter"><a href="#PublicStaticFunctions">Public Static Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofVec3f</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="PublicAttributes">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVec3f.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Functions">
+    <h3 class="sectionHeader">Functions</h3>
+    <div class="sectionContent"><div id="ab460048e6ace983d8313a374a75a624b">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ab460048e6ace983d8313a374a75a624b&quot;)">
+      <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
+      <a class="name">operator+</a>
+      <span class="args">(float f, const ofVec3f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ab460048e6ace983d8313a374a75a624b_description">
+
+</div>
+
+  </div><div id="adb40a5682d818d27650753b8ad672e0c">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#adb40a5682d818d27650753b8ad672e0c&quot;)">
+      <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
+      <a class="name">operator-</a>
+      <span class="args">(float f, const ofVec3f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="adb40a5682d818d27650753b8ad672e0c_description">
+
+</div>
+
+  </div><div id="a9f9a892c3e0d1af0890d6d007c86fe0b">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a9f9a892c3e0d1af0890d6d007c86fe0b&quot;)">
+      <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
+      <a class="name">operator*</a>
+      <span class="args">(float f, const ofVec3f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a9f9a892c3e0d1af0890d6d007c86fe0b_description">
+
+</div>
+
+  </div><div id="ad929a8f97ea303b288a3fc33ded76403">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ad929a8f97ea303b288a3fc33ded76403&quot;)">
+      <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
+      <a class="name">operator/</a>
+      <span class="args">(float f, const ofVec3f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ad929a8f97ea303b288a3fc33ded76403_description">
+
+</div>
+
+  </div><div id="a221bb717e5282907a0d835ff1134a0b6">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a221bb717e5282907a0d835ff1134a0b6&quot;)">
+      <span class="type">ostream &amp; </span>
+      <a class="name">operator&lt;&lt;</a>
+      <span class="args">(ostream &amp;os, const ofVec3f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a221bb717e5282907a0d835ff1134a0b6_description">
+
+</div>
+
+  </div><div id="a3a31b5d957af1dda19ce7451a6af9003">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a3a31b5d957af1dda19ce7451a6af9003&quot;)">
+      <span class="type">istream &amp; </span>
+      <a class="name">operator&gt;&gt;</a>
+      <span class="args">(istream &amp;is, ofVec3f &amp;vec)</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a3a31b5d957af1dda19ce7451a6af9003_description">
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofVec3f</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicAttributes">
     <h3 class="sectionHeader">Public Attributes</h3>
     <div class="sectionContent"><div id="aa69e24cc27cb6dda01d1e4c69e18f682">
     <div class="methodHeader" onClick="toggleDescription(&quot;#aa69e24cc27cb6dda01d1e4c69e18f682&quot;)">
@@ -1182,7 +1265,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -1199,6 +1282,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
