--- a/ofGLUtils.html
+++ b/ofGLUtils.html
@@ -25,7 +25,7 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">gl</a> &gt; <span id="classQuickNav">ofGLUtils.h</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofGLUtils.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
@@ -37,11 +37,13 @@
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofGLUtils.h</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="Defines">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofGLUtils.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Defines">
     <h3 class="sectionHeader">Defines</h3>
     <div class="sectionContent"><div id="a78bca80efb4aea900e47f0b98dba9038">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a78bca80efb4aea900e47f0b98dba9038&quot;)">
@@ -469,7 +471,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -486,6 +488,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
