--- a/ofPoint.html
+++ b/ofPoint.html
@@ -25,24 +25,26 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">types</a> &gt; <span id="classQuickNav">ofPoint.h</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofPoint.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#!!Missingheader!!">!! Missing header !!</a></li></ul>
+          <li class="chapter"><a href="#Typedefs">Typedefs</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofPoint.h</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="!!Missingheader!!">
-    <h3 class="sectionHeader">!! Missing header !!</h3>
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofPoint.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Typedefs">
+    <h3 class="sectionHeader">Typedefs</h3>
     <div class="sectionContent"><div id="a0e9c5f9596918593de99ee1bd275476f">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a0e9c5f9596918593de99ee1bd275476f&quot;)">
       <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
@@ -57,7 +59,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -74,6 +76,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
