--- a/ofSerial.html
+++ b/ofSerial.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofSerial</title>
+  <title>ofSerial.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,46 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">communication</a> &gt; <span id="classQuickNav">ofSerial</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofSerial.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#ProtectedAttributes">Protected Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#ProtectedFunctions">Protected Functions</a></li></ul>
+          <li class="chapter"><a href="#Defines">Defines</a></li><li class="chapter"><a href="#ProtectedAttributes">Protected Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li><li class="chapter"><a href="#ProtectedFunctions">Protected Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofSerial</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="ProtectedAttributes">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofSerial.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Defines">
+    <h3 class="sectionHeader">Defines</h3>
+    <div class="sectionContent"><div id="a5111e506db798f016bf509d7909a5c65">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a5111e506db798f016bf509d7909a5c65&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">MAX_SERIAL_PORTS</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a5111e506db798f016bf509d7909a5c65_description">
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofSerial</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="ProtectedAttributes">
     <h3 class="sectionHeader">Protected Attributes</h3>
     <div class="sectionContent"><div id="a90744b65810b6783313f8feaf2a41b7f">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a90744b65810b6783313f8feaf2a41b7f&quot;)">
@@ -339,7 +362,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -356,6 +379,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
