--- a/ofShader.html
+++ b/ofShader.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ofShader</title>
+  <title>ofShader.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">gl</a> &gt; <span id="classQuickNav">ofShader</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofShader.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
@@ -37,11 +37,19 @@
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofShader</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="PublicTypes">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofShader.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofShader</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicTypes">
     <h3 class="sectionHeader">Public Types</h3>
     <div class="sectionContent"><div id="a9f35d6011294c2e93d33d5d5eb65f4dd">
     <div class="methodHeader" onClick="toggleDescription(&quot;#a9f35d6011294c2e93d33d5d5eb65f4dd&quot;)">
@@ -896,7 +904,7 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div></div>
     </div>
 
 </div>
@@ -913,6 +921,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
