--- a/ofSystemUtils.html
+++ b/ofSystemUtils.html
@@ -25,23 +25,25 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">utils</a> &gt; <span id="classQuickNav">ofSystemUtils.h</span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofSystemUtils.h</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          <li class="chapter"><a href="#Functions">Functions</a></li></ul>
+          <li class="chapter"><a href="#Functions">Functions</a></li><li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li><li class="chapter"><a href="#PublicFunctions">Public Functions</a></li></ul>
       </li></ul>
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">ofSystemUtils.h</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"><div id="Functions">
+
+      <div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofSystemUtils.h</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="Functions">
     <h3 class="sectionHeader">Functions</h3>
     <div class="sectionContent"><div id="af5a9f8b8d9fffde3fadbb5fd000598d1">
     <div class="methodHeader" onClick="toggleDescription(&quot;#af5a9f8b8d9fffde3fadbb5fd000598d1&quot;)">
@@ -93,7 +95,91 @@
 
   </div></div>
   </div></div>
-      </div>
+  </div><div id="" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle">ofFileDialogResult</h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"><div id="PublicAttributes">
+    <h3 class="sectionHeader">Public Attributes</h3>
+    <div class="sectionContent"><div id="a10333951dbf932e377a866e290bea374">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a10333951dbf932e377a866e290bea374&quot;)">
+      <span class="type">string </span>
+      <a class="name">filePath</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a10333951dbf932e377a866e290bea374_description">
+
+</div>
+
+  </div><div id="ae23f66d2b7acca659640bed99850b462">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ae23f66d2b7acca659640bed99850b462&quot;)">
+      <span class="type">string </span>
+      <a class="name">fileName</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ae23f66d2b7acca659640bed99850b462_description">
+
+</div>
+
+  </div><div id="a63f36565e8613c7fd654c310ae127204">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a63f36565e8613c7fd654c310ae127204&quot;)">
+      <span class="type">bool </span>
+      <a class="name">bSuccess</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a63f36565e8613c7fd654c310ae127204_description">
+
+</div>
+
+  </div></div>
+  </div><div id="PublicFunctions">
+    <h3 class="sectionHeader">Public Functions</h3>
+    <div class="sectionContent"><div id="a1dc2551f2b1f749291f25f750dc9831c">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a1dc2551f2b1f749291f25f750dc9831c&quot;)">
+      <span class="type" style="display: none;"> </span>
+      <a class="name">ofFileDialogResult</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a1dc2551f2b1f749291f25f750dc9831c_description">
+
+</div>
+
+  </div><div id="a80fd7a5c48d882cc6c93c0aa4675b5a2">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a80fd7a5c48d882cc6c93c0aa4675b5a2&quot;)">
+      <span class="type">string </span>
+      <a class="name">getName</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a80fd7a5c48d882cc6c93c0aa4675b5a2_description">
+
+</div>
+
+  </div><div id="ad410507288163f82834434ac7ede39a5">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#ad410507288163f82834434ac7ede39a5&quot;)">
+      <span class="type">string </span>
+      <a class="name">getPath</a>
+      <span class="args">()</span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="ad410507288163f82834434ac7ede39a5_description">
+
+</div>
+
+  </div></div>
+  </div></div>
+  </div></div>
     </div>
 
 </div>
@@ -110,6 +196,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
